compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_unknown_field.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2310
expression: "\nimport gleam\ntype Int {\n  Int(bit_size: gleam.Int, bits: BitArray)\n}\n\npub fn main(not_a_record: gleam.Int) {\n  not_a_record.bits\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam
type Int {
  Int(bit_size: gleam.Int, bits: BitArray)
}

pub fn main(not_a_record: gleam.Int) {
  not_a_record.bits
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:8:16
  │
8 │   not_a_record.bits
  │                ^^^^ This field does not exist

The value being accessed has this type:

    gleam.Int

It does not have any fields.
